--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,6 @@
 /* Centering the map picture */
+/* Centering the map picture */
+/* Centering the map picture */
 
 .col-sm-12 .img-responsive {
   margin: 0 auto;
@@ -68,4 +70,10 @@
 .fa {
   width: 48px !important;
   height: 48px !important;
+}
+
+/* Setting footer style */
+
+.panel-footer.panel-custom {
+    background-color: white;
 }
